# CmakeExamples

./: .gitignore
cmake_template/: CMakeLists.txt  README.md  main.c
hello_world/: CMakeLists.txt
shared_library_project_template/: CMakeLists.txt  README.md
shared_library_project_template/goodbye_world/src/: CMakeLists.txt  main.c
shared_library_project_template/hello_world/src/: CMakeLists.txt  main.c
shared_library_project_template/shared_lib/: CMakeLists.txt
shared_library_project_template/shared_lib/shared/goodbye_lib/: goodbye.c  goodbye.h
shared_library_project_template/shared_lib/shared/hello_lib/: hello.c  hello.h
static_library_project_template/: CMakeLists.txt  README.md
static_library_project_template/lib/: CMakeLists.txt  my_another_lib.c  my_another_lib.h  my_lib.c  my_lib.h
static_library_project_template/src/: CMakeLists.txt  main.c
